@@ -1,6 +1,8 @@
 # lines starting with a hash are ignored
 # Number of DESKTOPS should be first
 DESKTOPS 6
+# Desktop to start on: default is 0
+#DEFAULT_DESK 0
 # Desktop switcher background colours
 # switchertheme colours are :
 #    focused desktop in switcher
